# FidelityFX-SDK

ffx-api/: CMakeLists.txt
ffx-api/include/ffx_api/dx11/: ffx_api_dx11.h  ffx_api_dx11.hpp
ffx-api/src/: backends.cpp  ffx_provider_fsr3upscale.cpp
sdk/: BuildFidelityFXSDK.bat  BuildFidelityFXSDKSolution.bat  BuildFidelityFXSDKSolutionDX11.bat  CMakeLists.txt  toolchain.cmake
sdk/include/FidelityFX/gpu/: ffx_core_hlsl.h
sdk/include/FidelityFX/gpu/frameinterpolation/: ffx_frameinterpolation_common.h
sdk/include/FidelityFX/gpu/fsr3upscaler/: ffx_fsr3upscaler_accumulate.h  ffx_fsr3upscaler_callbacks_hlsl.h  ffx_fsr3upscaler_rcas.h  ffx_fsr3upscaler_shading_change_pyramid.h
sdk/include/FidelityFX/gpu/opticalflow/: ffx_opticalflow_compute_optical_flow_v5.h
sdk/include/FidelityFX/gpu/spd/: ffx_spd.h
sdk/include/FidelityFX/host/: ffx_fsr3.h  ffx_fsr3upscaler.h
sdk/src/backends/dx11/: CMakeLists.txt  CMakeShadersFSR1.txt  CMakeShadersFSR2.txt  CMakeShadersFSR3Upscaler.txt  CMakeShadersFrameinterpolation.txt  CMakeShadersOpticalflow.txt  ffx_dx11.cpp
sdk/src/backends/dx11/shaders/fsr3upscaler/: ffx_fsr3upscaler_autogen_reactive_pass.hlsl  ffx_fsr3upscaler_rcas_pass.hlsl
sdk/src/backends/dx12/shaders/fsr3upscaler/: ffx_fsr3upscaler_accumulate_pass.hlsl
sdk/src/backends/dx12/shaders/opticalflow/: ffx_opticalflow_compute_optical_flow_advanced_pass_v5.hlsl
sdk/src/components/frameinterpolation/: ffx_frameinterpolation.cpp
sdk/src/components/fsr3/: ffx_fsr3.cpp
sdk/src/components/fsr3upscaler/: CMakeLists.txt  ffx_fsr3upscaler.cpp  ffx_fsr3upscaler_private.h
sdk/src/components/opticalflow/: ffx_opticalflow.cpp
sdk/tools/ffx_shader_compiler/src/: hlsl_compiler.cpp
